codepkg/objects/Document_Generation_Config__mdt.object
<CustomObject>
    <description>Configurations to generate new document</description>
    <fields>
        <fullName>Doc_Generate_URL__c</fullName>
        <description>URL to generate Document</description>
        <label>Doc Generate URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Criteria2__c</fullName>
        <description>This filter criterion is used for REAL,to display Records related to the Funding source of Project</description>
        <label>Filter Criteria2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Filter_Criteria__c</fullName>
        <description>This to be used in Lightning App Builder for Filtering component show hide scenario wise</description>
        <label>Filter Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <description>Specify Module for Document</description>
        <inlineHelpText>Specify Module for Document</inlineHelpText>
        <label>Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primaray_Object_API_Name__c</fullName>
        <description>Provided with object api val</description>
        <label>Primaray Object API Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primaray_Object_Filter_Clauses__c</fullName>
        <description>Provide with filter clauses for</description>
        <label>Primaray Object Filter Clauses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Object_Label__c</fullName>
        <description>Label to be displayed along Primary object label</description>
        <label>Primary Object Label</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object1_API_Name__c</fullName>
        <label>Related Object1 API Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object1_Filter_Clauses__c</fullName>
        <label>Related Object1 Filter Clauses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object1_Label__c</fullName>
        <label>Related Object1 Label</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object2_API_Name__c</fullName>
        <label>Related Object2 API Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object2_Filter_Clauses__c</fullName>
        <label>Related Object2 Filter Clauses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object2_Label__c</fullName>
        <label>Related Object2 Label</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object3_API_Name__c</fullName>
        <label>Related Object3 API Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object3_Filter_Clauses__c</fullName>
        <label>Related Object3 Filter Clauses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object3_Label__c</fullName>
        <label>Related Object3 Label</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Document Generation Config</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>Document_Name__c</columns>
        <columns>DeveloperName</columns>
        <columns>Doc_Generate_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Document Generation Configs</pluralLabel>
</CustomObject>